# PlasticPET

./: .gitignore  CMakeLists.txt  DataFileList.txt  README  loopE.mac
B3a/: .gitignore  CMakeLists.txt  README.md  exampleB3a.cc  init_vis.mac  vis.mac
B3a/%HOMEDRIVE%%HOMEPATH%/.matplotlib/: fontlist-v310.json
B3a/buildcopyFiles/: PVT.txt  PVT_FULL.txt
B3a/include/: B3DetectorConstruction.hh  B3Hit.hh  B3PhysicsList.hh  B3PhysicsListMessenger.hh  B3PrimaryGeneratorAction.hh  B3SteppingAction.hh  B3aActionInitialization.hh  B3aEventAction.hh  B3aHistoManager.hh  B3aRun.hh  B3aRunAction.hh  CrossSectionTester.hh  Data.hh  DetectorConstruction.hh  GDMLDetectorConstruction.hh  LYSO.hh  RunTools.hh  Version.hh
B3a/includeICRP/: ICRP110PhantomConstruction.hh  ICRP110PhantomNestedParameterisation.hh
B3a/includePhantom/: G4HumanPhantomConstruction.hh
B3a/src/: B3DetectorConstruction.cc  B3Hit.cc  B3PhysicsList.cc  B3PhysicsListMessenger.cc  B3PrimaryGeneratorAction.cc  B3StackingAction.cc  B3SteppingAction.cc  B3aActionInitialization.cc  B3aEventAction.cc  B3aHistoManager.cc  B3aRun.cc  B3aRunAction.cc
B3a/srcICRP/: ICRP110PhantomConstruction.cc  ICRP110PhantomNestedParameterisation.cc
B3a/srcPhantom/: G4HumanPhantomConstruction.cc
